--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
         "http-status-codes": "^2.2.0",
         "jsonwebtoken": "^8.5.1",
         "mongoose": "^6.8.0",
+        "morgan": "^1.10.0",
         "path-browserify": "^1.0.1",
         "url": "^0.11.0",
         "validator": "^13.7.0"
